Add buggy sign in and icons

--- a/dev/partials/indicators/list.html
+++ b/dev/partials/indicators/list.html
@@ -34,4 +34,8 @@
 	</div>
 </div>
 
-<a class="btn btn-default" ui-sref="main.indicator.edit({indicatorId: 'new'})" translate>indicator.create_new</a>
+<a class="btn btn-default" ui-sref="main.indicator.edit({indicatorId: 'new'})">
+	<i class="fa fa-plus"></i>
+	<span translate="indicator.create_new"></span>
+</a>
+
