--- a/dev/partials/indicators/menu.html
+++ b/dev/partials/indicators/menu.html
@@ -2,13 +2,22 @@
 	<div class="col-md-2">
 		<ul class="nav nav-pills nav-stacked">
 			<li ui-sref-active="active">
-				<a ui-sref="main.indicators.list" translate>shared.indicators</a>
+				<a ui-sref="main.indicators.list">
+					<i class="fa fa-book fa-fw"></i>
+					<span translate>shared.indicators</span>
+				</a>
 			</li>
 			<li ui-sref-active="active">
-				<a ui-sref="main.indicators.theme_list" translate>indicator.themes</a>
+				<a ui-sref="main.indicators.theme_list">
+					<i class="fa fa-medkit fa-fw"></i>
+					<span translate>indicator.themes</span>
+				</a>
 			</li>
 			<li ui-sref-active="active">
-				<a ui-sref="main.indicators.type_list" translate>indicator.types</a>
+				<a ui-sref="main.indicators.type_list">
+					<i class="fa fa-filter fa-fw"></i>
+					<span translate>indicator.types</span>
+				</a>
 			</li>
 		</ul>
 	</div>
