--- a/dev/partials/projects/input-entities.html
+++ b/dev/partials/projects/input-entities.html
@@ -9,7 +9,7 @@
 		<thead>
 			<tr>
 				<th translate>shared.name</th>
-				<th style="width:225px"></th>
+				<th style="width: 255px;"></th>
 			</tr>
 		</thead>
 		<tbody>
@@ -25,8 +25,14 @@
 					</ng-form>
 				</td>
 				<td>
-					<a class="btn btn-default btn-sm" ui-sref="main.project.input_entities_reporting({entityId: inputEntity.id})" translate>shared.view_stats</a>
-					<button class="btn btn-danger btn-sm" ng-click="delete(inputEntity.id)" translate>shared.delete</button>
+					<a class="btn btn-default btn-sm" ui-sref="main.project.input_entities_reporting({entityId: inputEntity.id})">
+						<i class="fa fa-line-chart"></i>
+						<span translate="shared.view_stats"></span>
+					</a>
+					<button class="btn btn-danger btn-sm" ng-click="delete(inputEntity.id)">
+						<i class="fa fa-remove"></i>
+						<span translate>shared.delete</span>
+					</button>
 				</td>
 			</tr>
 		</tbody>
@@ -39,6 +45,13 @@
 		</tfoot>
 	</table>
 
-	<button ng-click="save()" ng-disabled="projectForm.$invalid || isUnchanged()" class="btn btn-primary" translate>shared.save</button>
-	<button ng-click="reset()" ng-disabled="isUnchanged()"class="btn btn-default" translate>shared.remove_changes</button>
+	<button ng-click="save()" ng-disabled="projectForm.$invalid || isUnchanged()" class="btn btn-primary">
+		<i class="fa fa-floppy-o"></i>
+		<span translate="shared.save"></span>
+	</button>
+
+	<button ng-click="reset()" ng-disabled="isUnchanged()" class="btn btn-default">
+		<i class="fa fa-undo"></i>
+		<span translate="shared.remove_changes"></span>
+	</button>
 </form>
