--- a/dev/partials/projects/input.html
+++ b/dev/partials/projects/input.html
@@ -51,5 +51,12 @@
 	</tbody>
 </table>
 
-<button class="btn btn-default" ng-click="save()" translate>shared.save</button>
-<button class="btn btn-danger" ng-click="delete()" translate>shared.delete</button>
+<button class="btn btn-default" ng-click="save()">
+	<i class="fa fa-floppy-o"></i>
+	<span translate="shared.save"></span>
+</button>
+
+<button class="btn btn-danger" ng-click="delete()">
+	<i class="fa fa-remove"></i>
+	<span translate>shared.delete</span>
+</button>
