--- a/dev/partials/projects/list.html
+++ b/dev/partials/projects/list.html
@@ -26,4 +26,7 @@
 	</tbody>
 </table>
 
-<a class="btn btn-default" ui-sref="main.project.logical_frame({projectId: 'new'})" translate>project.create</a>
+<a class="btn btn-default" ui-sref="main.project.logical_frame({projectId: 'new'})">
+	<i class="fa fa-plus"></i>
+	<span translate="project.create"></span>
+</a>
