--- a/dev/partials/help/menu.html
+++ b/dev/partials/help/menu.html
@@ -3,10 +3,16 @@
 	<div class="col-md-2">
 		<ul class="nav nav-pills nav-stacked">
 			<li ui-sref-active="active">
-				<a ui-sref="main.help.monitoring">Monitoring</a>
+				<a ui-sref="main.help.monitoring">
+					<i class="fa fa-tachometer fa-fw"></i>
+					Monitoring
+				</a>
 			</li>
 			<li ui-sref-active="active">
-				<a ui-sref="main.help.documentation">Documentation</a>
+				<a ui-sref="main.help.documentation">
+					<i class="fa fa-book fa-fw"></i>
+					Documentation
+				</a>
 			</li>
 		</ul>
 	</div>
