--- a/dev/partials/projects/menu.html
+++ b/dev/partials/projects/menu.html
@@ -5,43 +5,57 @@
 			<li ui-sref-active="active">
 				<a ui-sref="main.project.logical_frame({projectId: project._id})"
 				   tooltip="{{'project.logical_frame_tooltip'|translate}}"
-				   tooltip-popup-delay="1000"
-				   translate>shared.logical_frame</a>
+				   tooltip-popup-delay="1000">
+				   <i class="fa fa-building-o fa-fw"></i>
+				   <span translate>shared.logical_frame</span>
+				</a>
 			</li>
 			
 			<li ng-class="{disabled: !project._id, active: $state.is('main.project.input_entities') || $state.is('main.project.input_entities_reporting')}">
 				<a ui-sref="main.project.input_entities({projectId: project._id})"
 				   tooltip="{{'project.input_entities_tooltip'|translate}}"
-				   tooltip-popup-delay="1000"
-				   translate>shared.input_entities</a>
+				   tooltip-popup-delay="1000">
+					<i class="fa fa-map-marker fa-fw"></i>
+					<span translate="shared.input_entities"></span>
+				</a>
 			</li>
 
 			<li ng-class="{disabled: !project._id, active: $state.is('main.project.input_groups') || $state.is('main.project.input_groups_reporting')}">
 				<a ui-sref="main.project.input_groups({projectId: project._id})"
 				   tooltip="{{'project.input_groups_tooltip'|translate}}"
-				   tooltip-popup-delay="1000"
-				   translate>shared.input_groups</a>
+				   tooltip-popup-delay="1000">
+					
+					<i class="fa fa-map-marker fa-fw"></i>
+					<span translate="shared.input_groups"></span>
+				</a>
 			</li>
 
 			<li ui-sref-active="active" ng-class="{disabled: !project._id}">
 				<a ui-sref="main.project.forms({projectId: project._id})"
 				   tooltip="{{'project.input_forms_tooltip'|translate}}"
-				   tooltip-popup-delay="1000"
-				   translate>project.input_forms</a>
+				   tooltip-popup-delay="1000">
+
+					<i class="fa fa-file-text-o fa-fw"></i>
+					<span translate>project.input_forms</span>
+				</a>
 			</li>
 			
 			<li ui-sref-active="active" ng-class="{disabled: !project._id}">
 				<a ui-sref="main.project.input_list({projectId: project._id})"
 				   tooltip="{{'project.waiting_inputs_tooltip'|translate}}"
-				   tooltip-popup-delay="1000"
-				   translate>project.waiting_inputs</a>
+				   tooltip-popup-delay="1000">
+					<i class="fa fa-clock-o fa-fw"></i>
+					<span translate>project.waiting_inputs</span>
+				</a>
 			</li>
 
 			<li ui-sref-active="active" ng-class="{disabled: !project._id}">
 				<a ui-sref="main.project.reporting({projectId: project._id})"
 				   tooltip="{{'project.reporting_tooltip'|translate}}"
-				   tooltip-popup-delay="1000"
-				   translate>shared.reporting</a>
+				   tooltip-popup-delay="1000">
+				   <i class="fa fa-line-chart fa-fw"></i>
+				   <span translate>shared.reporting</span>
+				</a>
 			</li>
 		</ul>
 	</div>
