--- a/dev/partials/menu.html
+++ b/dev/partials/menu.html
@@ -52,6 +52,7 @@
 						<span class="caret"></span>
 					</a>
 					<ul class="dropdown-menu" role="menu">
+						<li><a ui-sref="main.change_password" translate="shared.change_password"></a></li>
 						<li><a ng-click="logout()" translate="shared.logout"></a></li>
 					</ul>
 				</li>
