--- a/dev/partials/indicators/reporting.html
+++ b/dev/partials/indicators/reporting.html
@@ -18,16 +18,22 @@
 			<div class="form-group">
 				<label for="indicator" class="col-sm-2 control-label" translate>shared.begin</label>
 				<div class="col-sm-10">
-					<input type="month" class="form-control" ng-model="begin" ng-change="updateData()" required />
+					<div class="input-group">
+						<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
+						<input type="month" class="form-control" ng-model="begin" ng-change="updateData()" required />
+					</div>
 				</div>
 			</div>
 			<div class="form-group">
 				<label for="group-by-input" class="col-sm-2 control-label" translate>shared.columns</label>
 				<div class="col-sm-10">
-					<select class="form-control" id="group-by-input" ng-model="groupBy" ng-change="updateData()">
-						<option value="month" translate>shared.month</option>
-						<option value="year" translate>shared.year</option>
-					</select>
+					<div class="input-group">
+						<span class="input-group-addon"><i class="fa fa-columns"></i></span>
+						<select class="form-control" id="group-by-input" ng-model="groupBy" ng-change="updateData()">
+							<option value="month" translate>shared.month</option>
+							<option value="year" translate>shared.year</option>
+						</select>
+					</div>
 				</div>
 			</div>
 
@@ -45,18 +51,24 @@
 			<div class="form-group">
 				<label for="indicator" class="col-sm-2 control-label" translate>shared.end</label>
 				<div class="col-sm-10">
-					<input type="month" class="form-control" ng-model="end" ng-change="updateData()" required />
+					<div class="input-group">
+						<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
+						<input type="month" class="form-control" ng-model="end" ng-change="updateData()" required />
+					</div>
 				</div>
 			</div>
 
 			<div class="form-group">
 				<label for="display-input" class="col-sm-2 control-label" translate>shared.display</label>
 				<div class="col-sm-10">
-					<select class="form-control" id="display-input" ng-model="display">
-						<option value="value" translate>shared.values</option>
-						<option value="targetPart" translate>shared.target_percentage</option>
-						<option value="baselinePart" translate>shared.baseline_percentage</option>
-					</select>
+					<div class="input-group">
+						<span class="input-group-addon"><i class="fa fa-eye"></i></span>
+						<select class="form-control" id="display-input" ng-model="display">
+							<option value="value" translate>shared.values</option>
+							<option value="targetPart" translate>shared.target_percentage</option>
+							<option value="baselinePart" translate>shared.baseline_percentage</option>
+						</select>
+					</div>
 				</div>
 			</div>
 
