--- a/dev/partials/projects/input-list.html
+++ b/dev/partials/projects/input-list.html
@@ -30,7 +30,7 @@
 			<td>
 				<a class="btn btn-default btn-xs"
 					ui-sref="main.project.input({period: input.period.format('YYYY-MM'), formId: input.formId, entityId: input.inputEntityId})">
-					<i class="fa fa-pencil"></i>
+					<i class="fa fa-pencil-square-o"></i>
 					<span translate="project.input"></span>
 				</a>
 			</td>
