--- a/dev/partials/projects/form-list.html
+++ b/dev/partials/projects/form-list.html
@@ -15,10 +15,10 @@
 		<tr ng-repeat="form in project.dataCollection">
 			<td>{{form.name}}</td>
 			<td>
-				<button class="btn btn-default btn-xs" ui-sref="main.project.form({formId: form.id})">
+				<a class="btn btn-default btn-xs" ui-sref="main.project.form({formId: form.id})">
 					<i class="fa fa-pencil"></i>
 					<span translate="shared.edit"></span>
-				</button>
+				</a>
 				<button class="btn btn-danger btn-xs" ng-click="delete(form.id)">
 					<i class="fa fa-remove"></i>
 					<span translate="shared.delete"></span>
