--- a/dev/partials/indicators/reporting.html
+++ b/dev/partials/indicators/reporting.html
@@ -80,16 +80,15 @@
 					</p>
 				</div>
 			</div>
-
 		</div>
 	</div>
 </form>
 
 
 <div class="clearfix">
-	<button class="btn btn-primary btn-xs pull-right" ng-show="plot" ng-click="downloadGraph()">
+	<button class="btn btn-primary btn-xs pull-right" ng-show="plot" svg-save="image.png">
 		<i class="fa fa-download"></i>
-		<span translate>shared.download_plot</span>
+		<span translate="shared.download_plot"></span>
 	</button>
 </div>
 
