--- a/dev/partials/projects/user-list.html
+++ b/dev/partials/projects/user-list.html
@@ -6,7 +6,7 @@
 
 <form class="form-horizontal" role="form" name="usersForm" novalidate>
 
-	<div class="form-group" show-errors>
+	<div class="form-group">
 		<label for="input-owner" class="col-sm-2 control-label" translate="project.owner"></label>
 		<div class="col-sm-10">
 
