--- a/dev/partials/menu.html
+++ b/dev/partials/menu.html
@@ -10,7 +10,7 @@
 		</div>
 		
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-			<ul class="nav navbar-nav" ng-if="user">
+			<ul class="nav navbar-nav" ng-if="userCtx">
 				<li ng-class="{active: $state.includes('main.projects') || $state.includes('main.project')}">
 					<a ui-sref="main.projects">
 						<i class="fa fa-building"></i>
@@ -45,10 +45,10 @@
 					</ul>
 				</li>
 
-				<li class="dropdown" ng-if="user">
+				<li class="dropdown" ng-if="userCtx">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">
 						<i class="fa fa-user"></i>
-						{{user.name}}
+						{{userCtx.name}}
 						<span class="caret"></span>
 					</a>
 					<ul class="dropdown-menu" role="menu">
@@ -60,5 +60,6 @@
 		</div>
 	</div>
 </nav>
+
 
 <div class="container-fluid" ui-view style="padding-top: 70px;"></div>
