--- a/dev/partials/projects/form-edit.html
+++ b/dev/partials/projects/form-edit.html
@@ -1,18 +1,18 @@
 
 <ol class="breadcrumb">
-	<li><a ui-sref="main.projects" translate>shared.projects</a></li>
+	<li><a ui-sref="main.projects" translate="shared.projects"></a></li>
 	<li><a ui-sref="main.project.logical_frame({projectId: project._id})">{{project.name}}</a></li>
-	<li><a ui-sref="main.project.forms({projectId: project._id})" translate>project.input_forms</a></li>
+	<li><a ui-sref="main.project.forms({projectId: project._id})" translate="project.input_forms"></a></li>
 	<li class="active">{{form.name}}</li>
 </ol>
 
 <form class="form-horizontal" role="form" name="formForm" novalidate>
 
 	<fieldset>
-		<legend translate>project.data_collection</legend>
+		<legend translate="project.data_collection"></legend>
 
 		<div class="form-group" show-errors>
-			<label for="input-name" class="col-sm-2 control-label" translate>shared.name</label>
+			<label for="input-name" class="col-sm-2 control-label" translate="shared.name"></label>
 			<div class="col-sm-10">
 				<input type="text"
 					   class="form-control"
@@ -22,27 +22,27 @@
 					   placeholder="Exemple: Sondage trimestriel"
 					   required />
 				
-				<p class="help-block" ng-if="formForm.name.$error.required" translate>form.mandatory</p>
+				<p class="help-block" ng-if="formForm.name.$error.required" translate="form.mandatory"></p>
 			</div>
 		</div>
 
 		<div class="form-group" show-errors>
-			<label for="periodicity-input" class="col-sm-2 control-label" translate>project.periodicity</label>
+			<label for="periodicity-input" class="col-sm-2 control-label" translate="project.periodicity"></label>
 			<div class="col-sm-10">
 				<select class="form-control"
 						name="periodicity"
 						id="periodicity-input"
 						ng-model="form.periodicity">
-					<option value="monthly" translate>project.monthly</option>
-					<option value="quarterly" translate>project.quarterly</option>
-					<option value="planned" translate>project.planned</option>
+					<option value="monthly" translate="project.monthly"></option>
+					<option value="quarterly" translate="project.quarterly"></option>
+					<option value="planned" translate="project.planned"></option>
 				</select>
 			</div>
 		</div>
 
 		<div ng-if="form.periodicity == 'monthly' || form.periodicity == 'quarterly' ">
 			<div class="form-group" show-errors>
-				<label for="periodicity" class="col-sm-2 control-label" translate>shared.begin</label>
+				<label for="periodicity" class="col-sm-2 control-label" translate="shared.begin"></label>
 				<div class="col-sm-10">
 					<div class="input-group">
 						<div class="input-group-addon">
@@ -61,7 +61,7 @@
 			</div>
 
 			<div class="form-group" show-errors>
-				<label for="periodicity" class="col-sm-2 control-label" translate>shared.end</label>
+				<label for="periodicity" class="col-sm-2 control-label" translate="shared.end"></label>
 				<div class="col-sm-10">
 					<div class="input-group">
 						<div class="input-group-addon">
@@ -82,7 +82,7 @@
 	</fieldset>
 
 	<fieldset>
-		<legend translate>shared.indicators</legend>
+		<legend translate="shared.indicators"></legend>
 		
 		<table class="table table-bordered table-stripped">
 			<tr ng-repeat="indicator in chosenIndicators">
@@ -95,15 +95,15 @@
 	</fieldset>
 
 	<fieldset>
-		<legend translate>shared.input_form</legend>
+		<legend translate="shared.input_form"></legend>
 		
 		<table class="table table-bordered table-stripped">
 			<thead>
 				<tr>
-					<th translate>project.sumable</th>
-					<th translate>project.input_field</th>
-					<th translate>project.value_source</th>
-					<th translate>project.input_mode</th>
+					<th translate="project.sumable"></th>
+					<th translate="project.input_field"></th>
+					<th translate="project.value_source"></th>
+					<th translate="project.input_mode"></th>
 				</tr>
 			</thead>
 			<tbody>
