--- a/dev/partials/projects/logical-frame-indicator.html
+++ b/dev/partials/projects/logical-frame-indicator.html
@@ -37,7 +37,7 @@
 
 			<div class="form-group" show-errors>
 				<label for="relevance-input" class="col-sm-2 control-label" translate>project.relevance</label>
-				<div class="col-sm-10">
+				<div class="col-sm-10" acl-require-project-role="owner" acl-fallback="planning.relevance">
 					<textarea class="form-control"
 							  id="relevance-input"
 							  name="relevance"
@@ -51,7 +51,7 @@
 
 			<div class="row" style="margin-bottom: 15px">
 				<label class="col-sm-2 control-label" translate>project.limits</label>
-				<div class="form-group col-sm-5" show-errors style="margin: 0">
+				<div class="form-group col-sm-5" show-errors style="margin: 0" acl-require-project-role="owner" acl-fallback="planning.minimum">
 					<input class="form-control"
 						   type="number"
 						   name="minimum"
@@ -60,7 +60,7 @@
 						   required
 						   ng-max="planning.orangeMinimum" />
 				</div>
-				<div class="form-group col-sm-5" show-errors style="margin: 0">
+				<div class="form-group col-sm-5" show-errors style="margin: 0" acl-require-project-role="owner" acl-fallback="planning.maximum">
 					<input class="form-control"
 						   type="number"
 						   name="maximum"
@@ -73,7 +73,7 @@
 
 			<div class="row" style="margin-bottom: 15px">
 				<label class="col-sm-2 control-label" translate>project.orange_zone</label>
-				<div class="form-group col-sm-5" show-errors style="margin: 0">
+				<div class="form-group col-sm-5" show-errors style="margin: 0" acl-require-project-role="owner" acl-fallback="planning.orangeMinimum">
 					<input class="form-control"
 						   type="number"
 						   name="orangeMinimum"
@@ -83,7 +83,7 @@
 						   ng-max="planning.greenMinimum"
 						   required />
 				</div>
-				<div class="form-group col-sm-5" show-errors style="margin: 0">
+				<div class="form-group col-sm-5" show-errors style="margin: 0" acl-require-project-role="owner" acl-fallback="planning.orangeMaximum">
 					<input class="form-control"
 						   type="number"
 						   name="orangeMaximum"
@@ -97,7 +97,7 @@
 
 			<div class="row" style="margin-bottom: 15px">
 				<label class="col-sm-2 control-label" translate>project.green_zone</label>
-				<div class="form-group col-sm-5" show-errors style="margin: 0">
+				<div class="form-group col-sm-5" show-errors style="margin: 0" acl-require-project-role="owner" acl-fallback="planning.greenMinimum">
 					<input class="form-control"
 						   type="number"
 						   name="greenMinimum"
@@ -107,7 +107,7 @@
 						   ng-min="planning.orangeMinimum"
 						   ng-max="planning.greenMaximum" />
 				</div>
-				<div class="form-group col-sm-5" show-errors style="margin: 0">
+				<div class="form-group col-sm-5" show-errors style="margin: 0" acl-require-project-role="owner" acl-fallback="planning.greenMaximum">
 					<input class="form-control"
 						   type="number"
 						   name="greenMaximum"
@@ -121,7 +121,7 @@
 
 			<div class="form-group" show-errors>
 				<label for="baseline-input" class="col-sm-2 control-label" translate>project.baseline</label>
-				<div class="col-sm-10">
+				<div class="col-sm-10" acl-require-project-role="owner" acl-fallback="planning.baseline">
 					<input class="form-control"
 						   id="baseline-input"
 						   name="baseline"
